# user_service/user_service/internal/pkg/auth/delivery/http/auth_handlers.go
@@ -37,7 +37,7 @@ func NewAuthHandlers(r *chi.Mux,
 // @Param user body models.User true "User registration details"
 // @Success 201 {object} models.User "User registered successfully"
 // @Failure 400 {string} string "Bad Request"
-// @Router /auth/register [post]
+// @Router /api/v001/auth/register [post]
 func (handlers *authHandlers) register(w http.ResponseWriter, r *http.Request) {
 	var user models.User
 	err := json.NewDecoder(r.Body).Decode(&user)
@@ -66,7 +66,7 @@ func (handlers *authHandlers) register(w http.ResponseWriter, r *http.Request) {
 // @Success 200 {string} string "Login successful"
 // @Failure 400 {string} string "Bad Request"
 // @Failure 401 {string} string "Unauthorized"
-// @Router /auth/login [post]
+// @Router /api/v001/auth/login [post]
 func (handlers *authHandlers) logIn(w http.ResponseWriter, r *http.Request) {
 	var user models.User
 	err := json.NewDecoder(r.Body).Decode(&user)
@@ -115,7 +115,7 @@ func (handlers *authHandlers) logIn(w http.ResponseWriter, r *http.Request) {
 // @Description Logs out a user by clearing access and refresh tokens.
 // @Tags Authentication
 // @Success 200 {string} string "Logout successful"
-// @Router /auth/logout [delete]
+// @Router /api/v001/auth/logout [delete]
 func (handlers *authHandlers) logOut(w http.ResponseWriter, r *http.Request) {
 	http.SetCookie(w, &http.Cookie{
 		Name:     "Refresh-Token",
@@ -140,7 +140,7 @@ func (handlers *authHandlers) logOut(w http.ResponseWriter, r *http.Request) {
 // @Tags Authentication
 // @Success 200 {string} string "Access token generated successfully"
 // @Failure 401 {string} string "Unauthorized"
-// @Router /token [get]
+// @Router /api/v001/token [get]
 func (handlers *authHandlers) generateAccessTokenByRefreshToken(w http.ResponseWriter, r *http.Request) {
 	refreshTokenCookie, err := r.Cookie("Refresh-Token")
 	if err != nil {
